# SeniorProjectPrograms

./: CMakeLists.txt  main.cpp
DataToImage/: DataToImage.cpp  DataToImage.hpp  utils.hpp
MCR-ALS/: MCR-ALS.cpp  MCR-ALS.hpp  Regressors.cpp  Regressors.hpp  linear_algebra.cpp  linear_algebra.hpp  utils.cpp  utils.hpp
